# ros2-rover-inspection-robot

./: README.md
rover_ws/: .gitignore  README.md
rover_ws/src/rover_bringup/: package.xml  setup.py
rover_ws/src/rover_bringup/launch/: bringup.launch.py
rover_ws/src/rover_control/: package.xml  setup.py
rover_ws/src/rover_control/rover_control/: obstacle_avoidance.py  rover_camera_capture_service_client.py  rover_camera_capture_service_server.py  rover_navigation_action_client.py  rover_navigation_action_server.py
rover_ws/src/rover_description/: CMakeLists.txt  package.xml
rover_ws/src/rover_description/models/ground_plane/: model.config  my_ground_plane.sdf
rover_ws/src/rover_description/models/robot_rover/: model.config  model.sdf
rover_ws/src/rover_interfaces/: CMakeLists.txt  package.xml
rover_ws/src/rover_interfaces/action/: NavigateToPoint.action
rover_ws/src/rover_interfaces/srv/: CaptureCameraAtAngle.srv
rover_ws/src/rover_simulation/: CMakeLists.txt  package.xml
rover_ws/src/rover_simulation/worlds/: rover_robot_world.sdf
