<?xml version="1.0"?>
<package format="3">
  <name>rover_description</name>
  <version>0.0.0</version>
  <description>Robot model description for the rover project.</description>

  <maintainer email="sjafarik@mtu.edu">Saeed Jafari Kang</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>